# ml-stack

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
api/: main.py  requirements.txt
api_old/: main.py
app/: config.py  embeddings.py  llm.py  main.py  memory.py  rag.py  schemas.py  stream.py  vectorstore.py
data/: chats.json  doc_index.json
data/docs/: docker.txt  fastapi.txt  ollama.txt
